--- a/Data/Localization/Hotkeys/Actions/hotkeys_standard_aa.txt
+++ b/Data/Localization/Hotkeys/Actions/hotkeys_standard_aa.txt
@@ -242,6 +242,9 @@ map a game|action|verify "ActorDataSelectCommand regiment_gbr_paratrooper_a"
 map e game|action|verify "ActorDataSelectCommand regiment_gbr_paratrooper_heavy"
 map a game|action|verify "ActorDataSelectCommand regiment_gbr_paratrooper"
 map d game|action|verify "ActorDataSelectCommand regiment_gbr_sas_paratrooper"
+map b game|action|verify "ActorDataSelectCommand regiment_gbr_paratrooper_heavy2"
+map n game|action|verify "ActorDataSelectCommand regiment_gbr_paratrooper2"
+map m game|action|verify "ActorDataSelectCommand regiment_gbr_sas_paratrooper2"
 map d game|action|verify "ActorDataSelectCommand regiment_gbr_sas_paratrooper_ground"
 map v game|action|verify "ActorDataSelectCommand regiment_gbr_helichopter"
 
@@ -250,6 +253,7 @@ map f game|action|verify "ActorDataSelectCommand regiment_gbr_halftrack"
 map a game|action|verify "ActorDataSelectCommand regiment_gbr_halftrack_aa"
 map r game|action|verify "ActorDataSelectCommand regiment_gbr_halftrack_artillery"
 map t game|action|verify "ActorDataSelectCommand regiment_gbr_halftrack_sniper"
+map t game|action|verify "ActorDataSelectCommand regiment_gbr_halftrack_sp"
 map d game|action|verify "ActorDataSelectCommand regiment_gbr_halftrack_flame"
 map z game|action|verify "ActorDataSelectCommand regiment_gbr_infantry_mechanized"
 
@@ -330,6 +334,7 @@ map f game|action|verify "ActorDataSelectCommand regiment_ger_halftrack_tb"
 map a game|action|verify "ActorDataSelectCommand regiment_ger_halftrack_aa"
 map r game|action|verify "ActorDataSelectCommand regiment_ger_halftrack_artillery_new"
 map t game|action|verify "ActorDataSelectCommand regiment_ger_halftrack_sniper"
+map t game|action|verify "ActorDataSelectCommand regiment_ger_halftrack_sp"
 map d game|action|verify "ActorDataSelectCommand regiment_ger_halftrack_flame"
 map d game|action|verify "ActorDataSelectCommand regiment_ger_halftrack_flame_tb"
 map z game|action|verify "ActorDataSelectCommand regiment_ger_infantry_mechanized" 
@@ -342,6 +347,8 @@ map e game|action|verify "ActorDataSelectCommand regiment_ger_paratrooper_heavy_
 map a game|action|verify "ActorDataSelectCommand regiment_ger_paratrooper_a"
 map e game|action|verify "ActorDataSelectCommand regiment_ger_paratrooper_heavy"
 map v game|action|verify "ActorDataSelectCommand regiment_ger_helichopter"
+map b game|action|verify "ActorDataSelectCommand regiment_ger_paratrooper_heavy2"
+map n game|action|verify "ActorDataSelectCommand regiment_ger_paratrooper2"
 
 # Armor HQ
 map k game|action|verify "ActorDataSelectCommand regiment_ger_tank_king_tiger_new"
@@ -419,6 +426,7 @@ map f game|action|verify "ActorDataSelectCommand regiment_jpn_halftrack"
 map a game|action|verify "ActorDataSelectCommand regiment_jpn_halftrack_aa"
 map r game|action|verify "ActorDataSelectCommand regiment_jpn_halftrack_artillery"
 map t game|action|verify "ActorDataSelectCommand regiment_jpn_halftrack_sniper"
+map t game|action|verify "ActorDataSelectCommand regiment_jpn_halftrack_sp"
 map k game|action|verify "ActorDataSelectCommand regiment_jpn_tankette"
 map d game|action|verify "ActorDataSelectCommand regiment_jpn_halftrack_flame"
 map z game|action|verify "ActorDataSelectCommand regiment_jpn_infantry_mechanized"
@@ -429,9 +437,12 @@ map a game|action|verify "ActorDataSelectCommand regiment_jpn_paratrooper_ground
 map b game|action|verify "ActorDataSelectCommand regiment_jpn_paratrooper_banzai_ground"
 map e game|action|verify "ActorDataSelectCommand regiment_jpn_paratrooper_heavy_ground"
 map a game|action|verify "ActorDataSelectCommand regiment_jpn_paratrooper_a"
-map b game|action|verify "ActorDataSelectCommand regiment_jpn_paratrooper_banzai"
+map p game|action|verify "ActorDataSelectCommand regiment_jpn_paratrooper_banzai"
 map e game|action|verify "ActorDataSelectCommand regiment_jpn_paratrooper_heavy"
 map v game|action|verify "ActorDataSelectCommand regiment_jpn_helichopter"
+map b game|action|verify "ActorDataSelectCommand regiment_jpn_paratrooper_heavy2"
+map n game|action|verify "ActorDataSelectCommand regiment_jpn_paratrooper2"
+map m game|action|verify "ActorDataSelectCommand regiment_jpn_paratrooper_banzai2"
 
 # Armor HQ
 map a game|action|verify "ActorDataSelectCommand regiment_jpn_tank_aa"
@@ -509,6 +520,7 @@ map f game|action|verify "ActorDataSelectCommand regiment_rus_halftrack_tb"
 map a game|action|verify "ActorDataSelectCommand regiment_rus_halftrack_aa_new"
 map r game|action|verify "ActorDataSelectCommand regiment_rus_halftrack_artillery"
 map t game|action|verify "ActorDataSelectCommand regiment_rus_halftrack_sniper"
+map t game|action|verify "ActorDataSelectCommand regiment_rus_halftrack_sp"
 map u game|action|verify "ActorDataSelectCommand regiment_rus_rocket_truck"
 map d game|action|verify "ActorDataSelectCommand regiment_rus_halftrack_flame"
 map d game|action|verify "ActorDataSelectCommand regiment_rus_halftrack_flame_tb"
@@ -521,6 +533,8 @@ map e game|action|verify "ActorDataSelectCommand regiment_rus_paratrooper_heavy_
 map a game|action|verify "ActorDataSelectCommand regiment_rus_paratrooper_a"
 map e game|action|verify "ActorDataSelectCommand regiment_rus_paratrooper_heavy"
 map v game|action|verify "ActorDataSelectCommand regiment_rus_helichopter"
+map b game|action|verify "ActorDataSelectCommand regiment_rus_paratrooper_heavy2"
+map n game|action|verify "ActorDataSelectCommand regiment_rus_paratrooper2"
 
 # Armor HQ
 map a game|action|verify "ActorDataSelectCommand regiment_rus_tank_aa"
@@ -599,6 +613,8 @@ map f game|action|verify "ActorDataSelectCommand regiment_usa_halftrack"
 map a game|action|verify "ActorDataSelectCommand regiment_usa_halftrack_aa"
 map r game|action|verify "ActorDataSelectCommand regiment_usa_halftrack_artillery"
 map t game|action|verify "ActorDataSelectCommand regiment_usa_halftrack_sniper"
+map t game|action|verify "ActorDataSelectCommand regiment_usa_halftrack_sp"
+map x game|action|verify "ActorDataSelectCommand regiment_usa_halftrack_at_new"
 map d game|action|verify "ActorDataSelectCommand regiment_usa_halftrack_flame"
 map z game|action|verify "ActorDataSelectCommand regiment_usa_infantry_mechanized"
 
@@ -609,6 +625,8 @@ map e game|action|verify "ActorDataSelectCommand regiment_usa_paratrooper_heavy_
 map a game|action|verify "ActorDataSelectCommand regiment_usa_paratrooper_a"
 map e game|action|verify "ActorDataSelectCommand regiment_usa_paratrooper_heavy"
 map v game|action|verify "ActorDataSelectCommand regiment_usa_helichopter"
+map b game|action|verify "ActorDataSelectCommand regiment_usa_paratrooper_heavy2"
+map n game|action|verify "ActorDataSelectCommand regiment_usa_paratrooper2"
 
 # Armor HQ
 map a game|action|verify "ActorDataSelectCommand regiment_usa_tank_aa"
